finish ui of home page

--- a/w3school/accounts/templates/home.html
+++ b/w3school/accounts/templates/home.html
@@ -349,44 +349,213 @@
         </div>
         <!-- end html row -->
         <!-- start css row -->
+        <div style="background-color: #F0F0F0;" class="row">
+          <div class="col-xl-6">
+            <div class="hh_code">
+              <h3>CSS Example:</h3>
+              <div class="code">
+                <span style="color: blue;">
+                  <span style="margin-left: .5em; color: #AC0028;">body </span> <span style="color: black;">{</span><br>
+                  <span style="color: red; margin-left: 2em;">background-color</span><span style="color: black;">:</span>
+                  lightblue<span style="color: black;">;</span><br>
+                  <span style="color: black; margin-left: .5em;">}</span><br>
+                  <span style="margin-left: .5em; color: #AC0028;">h1 </span> <span style="color: black;">{</span><br>
+                  <span style="color: red; margin-left: 2em;">color</span><span style="color: black;">:</span>
+                  white<span style="color: black;">;</span><br>
+                  <span style="color: red; margin-left: 2em;">text-align</span><span style="color: black;">:</span>
+                  center<span style="color: black;">;</span><br>
+                  <span style="color: black; margin-left: .5em;">}</span><br>
+                  <span style="margin-left: .5em; color: #AC0028;">p </span> <span style="color: black;">{</span><br>
+                  <span style="color: red; margin-left: 2em;">font-family</span><span style="color: black;">:</span>
+                  verdana<span style="color: black;">;</span><br>
+                  <span style="color: red; margin-left: 2em;">font-size</span><span style="color: black;">:</span>
+                  20px<span style="color: black;">;</span><br>
+                  <span style="color: black; margin-left: .5em;">}</span><br>
+                </span>
+              </div>
+              <button>Try it Yourself >></button>
+            </div>
+          </div>
+          <div class="col-xl-6 hh_left">
+            <h2>CSS</h2>
+            <br>
+            <p>The language for styling web pages</p>
+            <br>
+            <button>LEARN CSS</button>
+            <button>CSS REFERENCES</button>
+            <br><br><br>
+          </div>
+        </div>
+        <!-- end css row -->
+        <!-- start JavaScript row -->
         <div class="row">
           <div class="col-xl-6 hh_left">
-            <h2>HTML</h2>
+            <h2>JavaScript</h2>
             <br>
-            <p>The language for building web pages</p>
+            <p>The language for programming web pages</p>
             <br>
-            <button>LEARN HTML</button>
-            <button>HTML REFERENCES</button>
+            <button>LEARN JavaScript</button>
+            <button>JavaScript REFERENCES</button>
             <br><br><br>
           </div>
           <div class="col-xl-6">
             <div class="hh_code">
-              <h3>HTML Example:</h3>
+              <h3>JavaScript Example:</h3>
               <div class="code">
-                <span>
-                  <span class="br" style="margin-left: .5em;"><</span>!DOCTYPE
-                  <span style="color: red;"> html</span><span class="br">></span><br>
-                  <span class="br" style="margin-left: .5em;"><</span><span>html</span>
-                  <span class="br">></span><br>
-                  <span class="br" style="margin-left: .5em;"><</span><span>title<span class="br">>
-                </span><span class="tt">HTML Tutorials</span></span>
-                  <span class="br"><</span><span>/title<span class="br">></span></span><br>
-                  <span class="br" style="margin-left: .5em;"><</span><span>body<span class="br">></span></span><br><br>
-                  <span class="br" style="margin-left: .5em;"><</span>h1<span class="br">></span>
-                  <span class="tt">This is a heading.</span>
-                  <span class="br"><</span>/h1<span class="br">></span><br>
-                  <span class="br" style="margin-left: .5em;"><</span>p<span class="br">></span>
-                  <span class="tt">This is a paragraph.</span>
-                  <span class="br"><</span>/p<span class="br">></span><br><br>
-                  <span class="br" style="margin-left: .5em;"><</span><span>/body<span class="br">></span></span><br>
-                  <span class="br" style="margin-left: .5em;"><</span><span>/html<span class="br">></span></span><br>
+                <span style="color: black;">
+                  <span style="color: blue; margin-left: .5em;"><</span><span style="color: #AC0028;">script</span><span style="color: blue;">></span><br>
+                  <span style="color: blue; margin-left: .5em;">function </span><span>myFunction ( ) {</span><br>
+                  <span style="color: blue; margin-left: 2em;">var </span><span>x = document.getElementById(</span><span style="color: #AC0028;">"demo"</span><span>);</span><br>
+                  <span style="margin-left: 2em;">x.style.fontSize = </span><span style="color: #AC0028;">"25px"</span>;<br>
+                  <span style="margin-left: 2em;">x.style.color = </span><span style="color: #AC0028;">"red"</span>;<br>
+                  <span style="margin-left: .5em;">}</span><br>
+                  <span style="color: blue; margin-left: .5em;"><</span><span style="color: #AC0028;">/script</span><span style="color: blue;">></span><br><br>
+                  <span style="color: blue; margin-left: .5em;"><</span><span style="color: #AC0028;">button </span><span style="color: red;">onclick</span><span style="color: blue;">="myFunction()"></span>
+                  <span>Click Me!</span><span style="color: blue;"><</span><span style="color: #AC0028;">/button</span><span style="color: blue;">></span><br>
                 </span>
               </div>
               <button>Try it Yourself >></button>
             </div>
           </div>
         </div>
-        <!-- end css row -->
+        <!-- end JavaScript row -->
+        <!-- start SQL-PHP row -->
+        <div style="background-color: #F0F0F0; text-align: center;" class="row">
+          <div class="col-xl-6">
+            <div class="sql">
+              <h3>SQL</h3>
+              <p>A language for accessing databases</p>
+              <button>LEARN SQL</button>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <div class="sql">
+              <h3>PHP</h3>
+              <p>A web server programming language</p>
+              <button>LEARN PHP</button>
+            </div>
+          </div>
+        </div>
+        <!-- end SQL-PHP row -->
+        <!-- start JQuery-Python row -->
+        <div style="background-color: #F0F0F0; text-align: center;" class="row">
+          <div class="col-xl-6">
+            <div class="sql">
+              <h3>JQuery</h3>
+              <p>A JavaScript library for developing web pages</p>
+              <button>LEARN JQuery</button>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <div class="sql">
+              <h3>Python</h3>
+              <p>A web server programming language</p>
+              <button>LEARN Python</button>
+            </div>
+          </div>
+        </div>
+        <!-- end JQuery-Python row -->
+        <!-- start w3-color-bootstrap row -->
+        <div style="text-align: center;" class="row">
+          <div class="col-xl-4">
+            <div class="w3">
+              <h3>W3.CSS</h3>
+              <p style="font-size: 1.3em;">A modern CSS framework for faster and better responsive web pages</p>
+              <button>LEARN W3.CSS</button>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="w3">
+              <h3>Color Picker</h3>
+              <img src="{% static 'imgs/img1.gif' %}">
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="w3">
+              <h3>Bootstrap</h3>
+              <p style="font-size: 1.3em;">A CSS framework for designing better web pages</p>
+              <button>LEARN BOOTSTRAP</button>
+            </div>
+          </div>
+        </div>
+        <!-- end w3-color-bootstrap row -->
+        <!-- start Exercises row -->
+        <div style="text-align: center;" class="row">
+          <div style="background-color: #616161;" class="col-xl-12 exer">
+            <h2 style="font-size: 4.5em;margin-top: 4%;color: white;">Exercises</h2>
+            <p style="color: white;">Test yourself with exercises for HTML, CSS and JavaScript</p>
+            <button>HTML Exercises >></button>
+            <button>CSS Exercises >></button>
+            <button>JavaScript Exercises >></button>
+          </div>
+        </div>
+        <!-- end Exercises row -->
+        <!-- start web templates row -->
+        <div style="text-align: center;" class="row">
+          <div style="background-color: #F0F0F0;" class="col-xl-12">
+            <h2 style="font-size: 3em;margin-top: 4%;color: black;">Web Templates</h2>
+            <p style="color: #616161">Browse our selection of
+              <strong style="color: black;">free</strong> responsive HTML Templates</p>
+            <img src="{% static 'imgs/w3css_templates.jpg' %}" alt="error">
+            <button class="web_b">BROWSE TEMPLATES</button>
+          </div>
+        </div>
+        <!-- end web templates row -->
+        <!-- start how to section row -->
+        <div style="text-align: center;" class="row">
+          <div class="col-xl-12">
+            <h2 style="font-size: 3em;margin-top: 4%;color: black;">How To Section</h2>
+            <p>Code snippets for HTML, CSS and JavaScript</p>
+            <div class="row">
+              <div style="text-align: right;" class="col-xl-6">
+                <iframe src="{% url 'page1' %}">
+                  <p>error in Iframe</p>
+                </iframe>
+              </div>
+              <div style="text-align: left;" class="col-xl-6">
+                <iframe src="{% url 'page2' %}">
+                  <p>error in Iframe</p>
+                </iframe>
+              </div>
+            </div>
+            <button class="web_b">LEARN HOW TO</button>
+          </div>
+        </div>
+        <!-- end how to section row -->
+        <!-- start web certificates row -->
+        <div style="text-align: center;" class="row">
+          <div style="background-color: black;" class="col-xl-12">
+            <img class="web_img" src="{% static 'imgs/getcertified.jpg' %}" alt="error">
+            <div class="col-xl-12 h_p">
+              <h2 style="color: white; font-size: 3em;margin-top: 3%;">Web Certificates</h2>
+              <p style="color: white;">Get Certificated in HTML, CSS and JavaScript</p>
+            </div>
+            <button class="w_c_b">Get Certified >> </button>
+          </div>
+        </div>
+        <!-- end web certificates row -->
+        <!-- start footer row -->
+        <div style="text-align: center;" class="row">
+          <div style="background-color: #616161; color: white;" class="col-xl-12">
+            <button class="foo_b">WEB CERTIFICATES</button>
+            <button class="foo_b">QUIZZES</button>
+            <button class="foo_b">EXERCISES</button>
+            <span class="foo_sp">F O R U M  |  A B O U T</span><br><br><br><br><br><br><br>
+            <p style="color: white; font-size: 1em;">
+              W3Schools is optimized for learning, testing, and training.
+              Examples might be simplified to improve reading and basic understanding.
+              Tutorials, references, and examples are constantly reviewed to avoid errors,
+            </p>
+            <p style="color: white; font-size: 1em;">
+              but we cannot warrant full correctness of all content. While using this site, you agree to have read and accepted
+              our terms of use, cookie and privacy policy.
+            </p><br>
+            <p style="color: white; font-size: 1em;">
+              Copyright 1999-2018 by Refsnes Data. All Rights Reserved.
+            </p><br><br>
+          </div>
+        </div>
+        <!-- end footer row -->
       </div>
     </div>
     <!-- end container -->
