--- a/w3school/accounts/static/css/stylee.css
+++ b/w3school/accounts/static/css/stylee.css
@@ -195,3 +195,179 @@
   color: black;
 }
 /* end html row */
+/* start sql-php row */
+.w3, .sql {
+  margin: 3em;
+  background-color: white;
+  padding: 3em;
+}
+.w3 h3, .sql h3{
+  font-size: 3em;
+}
+.w3 button, .sql button {
+  font-size: 1.2em;
+  margin-left: 1em;
+  padding: .5em;
+  background-color: #565656;
+  color: white;
+  cursor: pointer;
+}
+.w3 button:hover, .sql button:hover {
+  background-color: #CBCBCB;
+  color: black;
+}
+.w3 img {
+  width: 11em;
+  height: 10em;
+}
+/* end sql-php row */
+/* start Exercises row */
+.exer button{
+  background-color: #00BD4B;
+  color: white;
+  font-size: 1.2em;
+  cursor: pointer;
+  padding: .7em 3em;
+  border: none;
+  margin: 1.5em .5em 4em 0;
+}
+/* end Exercises row */
+/* start web templates */
+.web_b {
+  font-size: 1.2em;
+  margin: 1.5em;
+  padding: .7em;
+  background-color: #565656;
+  color: white;
+  cursor: pointer;
+}
+.web_b:hover{
+  background-color: #CBCBCB;
+  color: black;
+}
+/* end web templates */
+
+/* start how to section */
+iframe {
+  width: 65%;
+  border: 5px solid #ddd;
+  height: 300px;
+}
+@media (max-width: 420px) {
+	h1 {
+		margin-top: 20px !important;
+		font-size: 40px !important;
+	}
+	.header .overlay .plan {
+		float: none;
+		margin: 0 auto 20px auto;
+		font-size: 22px;
+	}
+}
+@media (max-width: 550px) {
+  /* start page2 */
+  .xs{
+    width: 20%;
+    float: left;
+    margin-left: 2.5%;
+    background-color: black;
+    color: #565656;
+  }
+  .xs h5{
+    padding-left: 1em;
+  }
+  .xs h5:nth-of-type(1){
+    margin-top: 1.2em;
+  }
+  .xs h5:hover {
+    color: white;
+    cursor: pointer;
+  }
+  .xx {
+    width: 65%;
+    margin-left: 2.5%;
+    float: left;
+    color: black;
+  }
+  /* end page1 */
+  /* start page2 */
+  .xs1{
+    width: 20%;
+    float: left;
+    margin-left: 2.5%;
+    background-color: white;
+    color: #3D80F7;
+  }
+  .xs1 h5{
+    padding-left: 1em;
+  }
+  .xs1 h5:nth-of-type(1){
+    margin-top: 1.2em;
+  }
+  .xs1 h5:hover {
+    color: blue;
+    cursor: pointer;
+  }
+  .xx1 {
+    width: 65%;
+    margin-left: 2.5%;
+    float: left;
+    color: black;
+  }
+  /* end page2 */
+}
+/* end how to section */
+/* start web certificate */
+.web_img{
+  /*position: absolute;*/
+  top: 0px;
+  left: 25%;
+  z-index: -1;
+}
+.h_p {
+  background-color: rgba(0, 0, 0, .5);
+  position: absolute;
+  top: 0;
+}
+.w_c_b {
+  position: absolute;
+  top: 60%;
+  left: 45%;
+  font-size: 1em;
+  color: white;
+  border: none;
+  padding: 1em 1.2em;
+  background-color: #00BD4B;
+}
+.w_c_b:hover {
+  cursor: pointer;
+  color: black;
+  border: none;
+  background-color: white;
+}
+/* end web certificate */
+/* start footer */
+.foo_b{
+  padding: .6em;
+  margin-top: 4%;
+  margin-left: 1%;
+  color: black;
+  background-color: white;
+  float: left;
+}
+.foo_b:hover{
+  background-color: #CBCBCB;
+  cursor: pointer;
+}
+.foo_sp{
+  margin-top: 4%;
+  margin-right: 1%;
+  float: right;
+  font-size: 1em;
+  color: white;
+}
+.foo_p{
+  color: white;
+  font-size: .5em;
+}
+/* end footer*/
